--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ APP_SECRET=3840cb3b2de1825f94711701ad199e39
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="mysql://rout:@127.0.0.1:3306/app?serverVersion=10.4.24-MariaDB"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/app?serverVersion=10.4.24-MariaDB"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
